Release Notes

* 7/29/2016
  * fixed AtlasPJB to use score queues for pmerge even if site is specified

* 7/25/2016
  * fixed IC for cpuEfficiency=0
  * tagging of shares

* 7/19/2016
  * changed TRB to check boolean value of noWaitParent
  * changed IC for NG+NF+LB

* 7/14/2016
  * setting old modtime in JG for high prio + running + one or more reset
  * using bulk increment in getOutput
  * using bulk fetch and insert for files in JG

* 7/12/2016
  * changed AtlasTS and AtlasPPP to register and delete ES datasets

* 7/11/2016
  * added jumbo job stuff
  * added requestType
  * added getOldMergeJobPandaIDs

* 7/7/2016
  * added removeTags to AtlasAPP

* 7/5/2016
  * added rescueUnLockedTasksWithPicked

* 7/4/2016
  * changed ToBeProcessed to check done datasets as well

* 6/30/2016
  * added ignoreMissingInDS
  * using bulk fetching for JEDI_DATASET_CONT_FILEID_SEQ

* 6/28/2016
  * resetting transferType for pmerge
  * using lfn sort for pmerge even if reuseSecOnDemand is used
  * fixed AtlasPWD for deleted datasets
  * fixed TC for paused

* 6/24/2016
  * enabled history-aware brokerage for analysis
  * added splitByFields

* 6/23/2016
  * using longer lifetime for unmerged datasets when AOD merge is not very successful
  * added useFileAsSourceLFN
  * added forceAvalanche
  * put logrotate file to etc/panda to avoid automatic installation on test nodes

* 6/20/2016
  * using _tid\d+ as a deliminator for NthField
  * setting ramCount=2000 for anal tasks by default
  * using eventService=2 for tasks with JC
  * enabled space check in AtlasPJB

* 6/13/2016
  * changed not to reset errorDiag until next JG attempt
  * fixed 24h timeout in AtlasPJB to send pmerge to remote sites

* 6/11/2016
  * changed TR not to update the same task simultaneously

* 6/8/2016
  * increased space limit to 100TB in AtlasPTB

* 6/6/2016
  * using rucio in registerDatasetSubscription
  * fixed AtlasPWD to use Production Output for subscriptions

* 6/2/2016
  * removed scope from tmpin
